**What file should you download?**
If you are on Windows, you can install the auto updater msi file
If you are on Linux, you can install the auto updater deb file

The auto updaters will check for a new version on launch.
The portable zip versions are used as update packages. You can run them standalone, but they are no longer truly portable as settings are stored on the local machine.

**Release notes for this version:**
Fix Coriolis-EDOMH error notification. this feature was never fully implemented and gave an EDSY error instead.
- It will now say it Coriolis doesn't work and that you should use EDSY instead. (until it's fixed)
Add CombatRank to Interdicted journal event